--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "git pull origin main"
     }
   }
 }
