--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "prettier": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
     "coverage": "npm test -- --coverage --watchAll=false",
     "lint": "prettier --check .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "hooks:pre-commit": "node ./hooks/pre-commit.js",
+    "hooks:pre-push": "node ./hooks/pre-push.js"
   },
   "eslintConfig": {
     "extends": [
@@ -52,14 +54,15 @@
   "devDependencies": {
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "shelljs": "^0.8.4"
   },
   "lint-staged": {
     "*": "prettier --write"
   },
   "husky": {
     "hooks": {
-      "pre-push": "git pull origin main",
+      "pre-push": "npm run hooks:pre-push",
       "pre-commit": "lint-staged"
     }
   }
