--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "coverage": "npm test -- --coverage --watchAll=false",
     "lint": "prettier --check .",
     "format": "prettier --write .",
-    "hooks:pre-commit": "node ./hooks/pre-commit.js",
-    "hooks:pre-push": "node ./hooks/pre-push.js"
+    "hooks:pre-commit": "node ./scripts/pre-commit.js",
+    "hooks:pre-push": "node ./scripts/pre-push.js"
   },
   "eslintConfig": {
     "extends": [
